--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel": "^6.5.2",
     "babel-cli": "^6.16.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "nodemon": "^1.11.0"
